# trash_robot

./: .gitignore  README.md
config/: 配置说明.md
config/dds/: cyclonedds_local.xml
config/grasp/: grasp_offset.yaml  handeye_point.yaml  trash_sort_params.template.yaml  trash_sort_params.yaml
config/hardware/: camera_realsense.yaml
config/mission/: patrol_routes.yaml
config/navigation/: depth_to_scan.yaml  localization_params.yaml  nav2_depth_overlay.yaml  nav2_params.yaml  slam_toolbox.yaml
config/perception/: dosod_trash_vocabulary.json  vlm_provider_registry.yaml  vlm_trash_classifier.yaml
config/rviz/: navigation_cloud.rviz  navigation_light.rviz
config/system/: rdk_resource_profile.yaml  stack_contract.yaml
config/vision/: bpu_runtime_policy.yaml
docs/: V3_DDS与运动锁规则.md  V3_VLM_API主线与本地模型预留.md  V3_hbm_runtime_BPU推理接入规则.md  V3模块边界与运行规则.md  V3项目缺口检查.md  VLM垃圾分类.md  WebUI运行约束.md  实施变更日志.md  建图导航操作.md  抓取操作.md  构建部署操作.md  模块启动说明书.md  模块边界与工具清单.md  演示操作.md  生命周期与恢复.md  说明.md  调试指南.md  项目结构.md
maps/: 344.pgm  344.yaml
models/paper_ball_yolov8n/: README.md  crumpled_paper.list  x5_mapper_config.yaml  yolov8_paper_ball_workconfig.json
scripts/: apply_paper_ball_bbox.py  capture_paper_ball_dataset.py  check.sh  common.sh  init_pose.sh  map_to_marker.py  patrol_route_manager.py  patrol_route_manager.sh  prepare_navigation_arm.sh  record_patrol_waypoint.py  record_patrol_waypoint.sh  run_arm_keyboard.sh  run_base_keyboard.py  run_base_keyboard.sh  save_map.sh  set_drop_point.sh  set_grasp_offset.sh  setup_rviz_web.sh  source_debug.sh  source_v3.sh  start_arm.sh  start_arm_keyboard.sh  start_base.sh  start_camera.sh  start_estop.sh  start_grasp.sh  start_handeye.sh  start_local_vlm.sh  start_mapping.sh  start_navigation.sh  start_patrol_grasp.sh  start_rviz_web.sh  start_web_console.sh  start_yolo_detector.sh  stop_all.sh  trash_stack.sh  脚本说明.md
src/trash_robot_bringup/: package.xml  setup.cfg  setup.py
src/trash_robot_bringup/config/: roarm_servo.yaml
src/trash_robot_bringup/launch/: camera_realsense.launch.py  depth_to_scan.launch.py  nav2_real.launch.py  nav2_real_depth.launch.py  perception_grasp.launch.py  roarm_servo_control.launch.py  roarm_servo_headless.launch.py  robot_bringup.launch.py
src/trash_robot_interfaces/: CMakeLists.txt  package.xml
src/trash_robot_interfaces/action/: SortGrasp.action
src/trash_robot_interfaces/srv/: InitPose.srv
src/trash_robot_web/: package.xml  setup.cfg  setup.py
src/trash_robot_web/launch/: web_console.launch.py
src/trash_robot_web/resource/: trash_robot_web
src/trash_robot_web/trash_robot_web/: web_console.py
src/trash_robot_web/trash_robot_web/static/: __init__.py  index.html
tests/: test_config_integrity.py  test_vlm_trash_classifier.py
tools/: convert_paper_ball_yolo_x5.py  run_paper_ball_x5_conversion.sh
(+52 files in other folders)
